<resources>
    <string name="app_name">Tally Sheet</string>
    <string name="user_balance">Balance: %1$.2f€</string>
    <string name="item_price">Price: %1$.2f€</string>
    <string name="item_stock">Stock: %1$d</string>
    <string name="item_buy_text">Buy %1$s for %2$.2f€?</string>
    <string name="item_outOfStock">%1$s not in stock</string>
    <string name="item_buy_title">Buy %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admin_login">Login</string>
    <string name="admin_credentialsInvalid">Wrong password</string>
    <string name="admin_manageItems">Manage Items</string>
    <string name="admin_manageUser">Manage Customer</string>
    <string name="admin_changePassword">Change Password</string>
    <string name="admin_setProtocolPath">Set Protocol Path</string>
    <string name="title_activity_manage_user">Manage Customer</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="clear_balance">Clear Balance</string>
    <string name="remove_customer_confirmation">Really remove user %1$s?</string>
    <string name="remove_item_confirmation">Really remove item %1$s?</string>
    <string name="ok">Ok</string>
    <string name="confirm_clear_balance">Clear balance of %1$s?</string>
    <string name="title_activity_manage_items">Manage Items</string>
    <string name="item_detail">Price: %1$.2f    Stock: %2$d</string>
    <string name="change_price">Change Price</string>
    <string name="change_stock">Change Stock</string>
    <string name="choose_directory">Choose Directory</string>
    <string name="password">Password</string>
    <string name="admin_editInvoices">Edit Purchases</string>
    <string name="tapToDelete">Tap to delete</string>
    <string name="bought">bought</string>
    <string name="fors">for</string>
    <string name="invoice_delete">Cancel Purchase</string>
    <string name="really_delete_invoice">Cancel purchase of %1$s for %2$.2f€ by %3$s?</string>
    <string name="reverted">Canceled purchase of %1$s for %2$.2f€ by %3$s</string>
    <string name="invoice_reverted_delete">Restore purchase</string>
    <string name="really_delete_invoice_reverted">Restore purchase of %1$s for %2$.2f€ by %3$s?</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9236938603380522/5520480692</string>
    <string name="title_activity_admin_extended">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="user_management_section_title">User Management</string>
    <string name="settins_management_section_title">Admin Settings</string>
    <string name="admin_createBackup">Create Backup</string>
    <string name="admin_readBackup">Read Backup</string>
    <string name="title_activity_edit_user" translatable="false">EditUserActivity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="name">Name</string>
    <string name="edit_user_balance">Balance</string>
    <string name="title_activity_edit_items" translatable="false">EditItemsActivity</string>
    <string name="tapToEdit">Tap to edit</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="really_read_backup">Load backup? Current data will be destroyed!</string>
    <string name="found_backup">Found backup!</string>
    <string name="backup_created">Backup created!</string>
    <string name="backup_not_created">Could not write backup!</string>
    <string name="changes_are_saved_automatically">Changes are saved automatically</string>
    <string name="id" translatable="false">Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="item_id">Item Id</string>
    <string name="item_name">Item Name</string>
    <string name="item_price_label">Item Price</string>
    <string name="date">Date</string>
    <string name="invoice_state">State</string>
    <string name="invoice_state_open">Open</string>
    <string name="invoice_state_closed">Closed</string>
    <string name="invoice_state_revoked">Revoked</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_has_been_changed">Password has been changed</string>
    <string name="hello_blank_fragment" translatable="false">Hello World</string>
    <string name="current_file">Path</string>
    <string name="not_set">Not Set</string>
    <string name="select_file">Select File</string>
    <string name="write_backup">Write Backup</string>
    <string name="loading_data">Loading Data</string>
    <string name="path_not_set">Path not set</string>
    <string name="read_backup">Read backup</string>
    <string name="create_protocol">Create Protocol</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
