<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fragment_admin_user_management"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rynkbit.tk.coffeelist.admin.AdminExtendedActivity">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/admin_manageUser"
            android:id="@+id/btnAdminManageUser"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/admin_manageItems"
            android:shadowRadius="2"
            android:id="@+id/btnAdminManageItems"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/admin_editInvoices"
            android:shadowRadius="2"
            android:id="@+id/btnAdminInvoices"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

</LinearLayout>
