<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rynkbit.tk.coffeelist.admin.AdminActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_manageUser"
        android:elevation="@dimen/cardview_default_elevation"
        android:shadowRadius="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btnAdminManageUser"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_manageItems"
        android:elevation="@dimen/cardview_default_elevation"
        android:shadowRadius="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btnAdminManageItems"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_changePassword"
        android:elevation="@dimen/cardview_default_elevation"
        android:shadowRadius="2"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_setBackupPath"
        android:elevation="@dimen/cardview_default_elevation"
        android:shadowRadius="2"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

</LinearLayout>
